commit tree 93786d8b251d3b786a25436fafaf2e0df38f3707

--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>HTML Images</title>
   </head>
   <body>
+    <img
+      src="https://i.pinimg.com/originals/92/fe/1b/92fe1b72b81521c3d862c427390847d3.gif"/>
+    <img
+      src="https://i.pinimg.com/originals/92/fe/1b/92fe1b72b81521c3d862c427390847d3.gif"
+      alt="Plasma Energy ball visualized"/>
+    <img
+      src="https://i.pinimg.com/originals/92/fe/1b/92fe1b72b81521c3d862c427390847d3.gif"
+      alt="Plasma Energy ball visualized"
+      title="Plasma ball"/>
     <!-- Your code here -->
   </body>
 </html>
